boulder/tests/error/intrinsics/to_bytes/arg_ty.bo
# found `Bool`
# `u16`
# `u32`
# (7:

fn test(a: Bool) -> u8 {
    to_bytes(a).a
}